--- a/roles/apps/tasks/debian.docker.yml
+++ b/roles/apps/tasks/debian.docker.yml
@@ -17,7 +17,7 @@
 
 - name: Add deb repository
   apt_repository:
-    repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu ubuntu-{{ ansible_distribution_release }} stable"
+    repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
     state: present
   become: TrueS
 
