--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: touch local.dotfiles
   file:
-    path: "~/.{{ item }}"
+    path: "{{ ansible_env.HOME }}/.{{ item }}"
     state: touch
   with_items:
     - profile
@@ -13,7 +13,7 @@
 - name: setup dotfiles
   template:
     src: "{{ item }}"
-    dest: "~/.{{ item }}"
+    dest: "{{ ansible_env.HOME }}/.{{ item }}"
     force: yes
   with_items:
     - aliases
@@ -26,9 +26,32 @@
 
 - name: setup ~/.bashrc
   lineinfile:
-    dest: ~/.profile
+    dest: "{{ ansible_env.HOME }}/.profile"
     line: "source {{ ansible_env.HOME }}/.bashrc"
     regexp: "bashrc"
 
-- name: load dotfiles
-  shell: "source {{ ansible_env.HOME }}/.bashrc"
+- name: create .ssh directories
+  file:
+    dest: "{{ ansible_env.HOME }}/{{ item }}"
+    mode:  0700
+    state: directory
+  with_items:
+    - '.ssh'
+    - '.ssh/config.d'
+    - '.ssh/keys'
+
+- name: copy common config
+  copy:
+    src: "{{ item }}"
+    dest: "{{ ansible_env.HOME }}/.ssh/config.d/"
+    mode: 0600
+  with_fileglob:
+    - '_*'
+
+- name: assemble config.d
+  assemble:
+    src: "{{ ansible_env.HOME }}/.ssh/config.d"
+    dest: "{{ ansible_env.HOME }}/.ssh/config"
+    mode: 0600
+    ignore_hidden: yes
+    delimiter: "\n"
