Run prepare always

--- a/roles/apps/tasks/debian.yml
+++ b/roles/apps/tasks/debian.yml
@@ -9,6 +9,7 @@
       - silversearcher-ag
       - gpg
       - ipcalc
+      - linuxbrew-wrapper
 
 - name: Install docker
   include: debian.docker.yml
