--- a/roles/prepare/tasks/debian.yml
+++ b/roles/prepare/tasks/debian.yml
@@ -6,10 +6,13 @@
     update_cache: yes
 
 - name: Install homebrew wrapper
+  become: yes
+  become_method: sudo
   apt:
     name:
+      - build-essential
       - linuxbrew-wrapper
 
-- name: Update brew
-  homebrew:
-    update_homebrew: yes
+# - name: Update brew
+#   homebrew:
+#     update_homebrew: yes
