--- a/roles/ruby/tasks/main.yml
+++ b/roles/ruby/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: set shell prefix for system-wide
   set_fact:
-    rbenv_shell: ". /etc/profile/ && "
+    rbenv_shell: ". /etc/profile && "
   when:
     - ansible_os_family == 'Darwin' and rbenv_user_profile
 
