--- a/roles/dotfiles/templates/tmux.conf
+++ b/roles/dotfiles/templates/tmux.conf
@@ -1,4 +1,47 @@
+##### MAPPINGS
+# PREFIX CTRL+a: send CTRL+a to the local application.
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set -g prefix C-a
+bind C-a send-prefix
+
 set-option -g mouse on
+
+set -s escape-time 1
+set -g default-terminal "screen-256color"
+# Make tmux act like xterm to prevent Vim issues:
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+
+# PREFIX |: Create a new vertial pane.
+bind | split-window -h -c "#{pane_current_path}"
+# PREFIX -: Create a new horizontal pane.
+bind - split-window -v -c "#{pane_current_path}"
+
+# Use Vim movement key mappings for switching around between panes.
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Use Vim movement key mappings (uppercase) for resizing panes.
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key M split-window -h "vim ~/.tmux.conf"
+
+# Pane border.
+set -g pane-border-style fg=black
+set -g pane-active-border-style fg=brightgreen
+
+# start window numbers at 1 to match keyboard order with tmux window order
+set -g base-index 1
+set-window-option -g pane-base-index 1
+
+# renumber windows sequentially after closing any of them
+set -g renumber-windows on
+
+# soften status bar color from harsh green to light gray
+set -g status-style bg='#666666',fg='#aaaaaa'
