Use vim 8.2 for ubuntu/debian

--- a/roles/apps/tasks/debian.yml
+++ b/roles/apps/tasks/debian.yml
@@ -13,6 +13,11 @@
       - ipcalc
       - linuxbrew-wrapper
 
+- name: Install common snaps
+  snap:
+    name:
+      - universal-ctags
+
 - name: Install docker
   include: debian.docker.yml
 
