--- a/roles/vim/tasks/install.debian.yml
+++ b/roles/vim/tasks/install.debian.yml
@@ -1,3 +1,8 @@
+- name: Add PPA
+  apt_repository:
+    repo: ppa:jonathonf/vim
+    state: present
+
 - name: update apt cache
   apt:
     update_cache: yes
