--- a/roles/go/tasks/main.yml
+++ b/roles/go/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Include OS specifix setup task
-  include: "install.{{ os_family }}.yml"
+  include_tasks: "install.{{ os_family }}.yml"
 
 - name: setup go path
   file:
