Remove useless app from dock

--- a/roles/apps/tasks/darwin.yml
+++ b/roles/apps/tasks/darwin.yml
@@ -69,4 +69,17 @@
     - Podcasts
     - TV
     - Books
-    - App Store
+    - App Store
+    - Numbers
+    - Pages
+    - Keynote
+    - Карты
+    - Подкасты
+    - Заметки
+    - Напоминания
+    - Контакты
+    - Музыка
+    - Календарь
+    - Фото
+    - Сообщения
+    - Системные настройки
