--- a/roles/ruby/defaults/main.yml
+++ b/roles/ruby/defaults/main.yml
@@ -2,10 +2,8 @@
 rbenv:
   env: system
   version: v1.0.0
-  default_ruby: 2.4.2
+  default_ruby: 2.7.0
   rubies:
-    - version: 2.4.2
-    - version: 2.6.3
     - version: 2.7.0
 
 rbenv_clean_up: false
@@ -18,7 +16,7 @@ rbenv_plugins:
   - { name: "rbenv-vars",         repo: "https://github.com/rbenv/rbenv-vars.git",         version: "master" }
   - { name: "ruby-build",         repo: "https://github.com/rbenv/ruby-build.git",         version: "master" }
   - { name: "rbenv-default-gems", repo: "https://github.com/rbenv/rbenv-default-gems.git", version: "master" }
-  - { name: "rbenv-installer",    repo: "https://github.com/rbenv/rbenv-installer.git",    version: "master" }
+  - { name: "rbenv-installer",    repo: "https://github.com/rbenv/rbenv-installer.git",    version: "main" }
   - { name: "rbenv-update",       repo: "https://github.com/rkh/rbenv-update.git",         version: "master" }
   - { name: "rbenv-whatis",       repo: "https://github.com/rkh/rbenv-whatis.git",         version: "master" }
   - { name: "rbenv-use",          repo: "https://github.com/rkh/rbenv-use.git",            version: "master" }
