--- a/roles/prepare/tasks/darwin.yml
+++ b/roles/prepare/tasks/darwin.yml
@@ -1,3 +1,17 @@
+- name: Check if Rosetta2 required?
+  shell: /usr/bin/pgrep oahd >/dev/null 2>&1
+  register: rosetta_check
+  changed_when: false
+  ignore_errors: yes
+  failed_when: false
+  check_mode: no
+  
+- name: Install Rosetta2
+  shell: /usr/sbin/softwareupdate --install-rosetta --agree-to-license
+  when:
+    - ansible_processor == 'Apple M1' or ansible_machine  == 'arm64'
+    - rosetta_check.rc != 0
+
 - name: Update brew
   homebrew:
     update_homebrew: yes
