chore: unspecified changes

--- a/roles/dotfiles/templates/tmux.conf
+++ b/roles/dotfiles/templates/tmux.conf
@@ -10,7 +10,7 @@ set -s escape-time 1
 set -g default-terminal "screen-256color"
 # Make tmux act like xterm to prevent Vim issues:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-
+set -g history-limit 5000
 
 # PREFIX |: Create a new vertial pane.
 bind | split-window -h -c "#{pane_current_path}"
