--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -31,6 +31,9 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# pass resize events
+set -g terminal-overrides 'xterm*:resize-terms'
+
 # Key bindings for configuration management
 bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 bind M split-window -h "vim ~/.tmux.conf"
