--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -9,11 +9,7 @@ set -g mouse on
 
 # General settings
 set -s escape-time 1
-set -g default-terminal "screen-256color"
-set -g history-limit 10000  # Increased for better scrolling
-
-# Terminal overrides to prevent issues with applications like Vim
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g history-limit 10000
 
 # Pane management shortcuts
 bind | split-window -h -c "#{pane_current_path}"  # Vertical split
@@ -64,11 +60,11 @@ set -g window-status-format "#[fg=yellow] #I:#W "
 setw -g monitor-activity on
 set -g visual-activity on
 
-# Use 24-bit true color (if supported by terminal)
+# Terminal and color settings (consolidated)
 set -g default-terminal "tmux-256color"
-set -g terminal-overrides ',xterm-256color:Tc'
+set -ga terminal-overrides ",xterm-256color:Tc"
 
-# Turn off all visual and auditory bell notifications
+# Turn off bell notifications
 set -g bell-action none
 set -g visual-bell off
 
