--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -68,6 +68,9 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 set -g bell-action none
 set -g visual-bell off
 
+# Clipboard integration
+set -g set-clipboard on
+
 # Plugins (optional)
 # Uncomment these lines if using TPM (Tmux Plugin Manager)
 # set -g @plugin 'tmux-plugins/tpm'
